# 0.00.19 (65067) Jun 14, 2012
6/14/12 first 2 tabs cleaned up, feature complete, all known issues addressed
6/14/12 fix jumpiness of slope manipulator that was happening when skipping over slope=0/0
6/14/12 fix graph tick marks to display integer values
6/13/12 when model adjusts slope to prevent undefined lines, send a sim-sharing model message
6/13/12 make equation spinners update correctly when they skip over zero value to prevent slope=0/0
6/12/12 add specialization of StraightLine that snaps its args to an integer grid
6/12/12 encapsulate method of rounding and formatting doubles to ints in SimplifiedEquationFactory.toIntString
6/12/12 show equation on line while manipulators are in use, since we're snapping to grid [65022]
6/12/12 remove MathUtil.roundHalfUp calls that are unnecessary now that we snap to grid while dragging [65019]
6/12/12 rename MathUtil.round to MathUtil.roundHalfUp, to prevent accidentally using Math.round
6/12/12 factor out duplication in GraphNode
6/12/12 change test harnesses for interactive equations
6/12/12 javadoc, reorder constructor args for consistency
6/12/12 refactor duplication in canvas classes for first 2 tabs
6/12/12 add model constructor for graph with 4 uniform quadrants, javadoc
6/12/12 more refactoring of model-container classes
6/12/12 create a property that ensures that our line is not undefined
6/12/12 refactor duplication in model-container classes for first 2 tabs
6/12/12 refactor duplication in control panels for interactive equation
6/12/12 use the same slope drag handler for both line forms
6/12/12 refactor duplication in class hierarchy of line manipulation drag handlers
# 0.00.18 (64844) Jun 7, 2012
6/7/12 change requests based on 6/7 meetings
6/7/12 when rise<0 and run>0, put equation below line so that it isn't occluded by rise/run brackets
6/7/12 rename some classes related to simplified equations
6/7/12 snap point tool to grid while dragging
6/7/12 delete equation controls that aren't used